TEIID-689 changed numeric conversions to use valueof. also consolidated many of the transforms.